<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable name="viewmodel" type="com.example.databinding_assignment.MainViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/stopwatch_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="30sp"
            android:text="@{viewmodel.timeLiveData}"
            app:layout_constraintBottom_toTopOf="@id/reset_button"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/start_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:background="@color/teal_700"
            android:text="@string/start"
            android:onClick="@{() -> viewmodel.onStartButtonClicked()}"
            app:layout_constraintTop_toBottomOf="@id/stopwatch_textview"
            app:layout_constraintBaseline_toBaselineOf="@+id/reset_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/reset_button"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/reset_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="3dp"
            android:background="@color/purple_200"
            android:layout_marginTop="30dp"
            android:text="@string/reset"
            android:textColor="@color/white"
            android:onClick="@{() -> viewmodel.onResetButtonClicked()}"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@id/stopwatch_textview"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/stop_button"
            app:layout_constraintStart_toEndOf="@+id/start_button" />

        <Button
            android:id="@+id/stop_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="30dp"
            android:text="@string/stop"
            android:textColor="@color/white"
            android:onClick="@{() -> viewmodel.onStopButtonClicked()}"
            android:background="@color/red"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@id/stopwatch_textview"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintBaseline_toBaselineOf="@+id/reset_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/reset_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>